--- a/style.css
+++ b/style.css
@@ -24,9 +24,11 @@ img {
   margin-right: 60px;
   margin-bottom: 100px;
   margin-top: 100px;
+  padding-bottom: 50px;
+  max-width: 400px;
 }
 .right-block {
-  max-width: 600px;
+  max-width: 500px;
 }
 
 h1,
@@ -67,7 +69,6 @@ a {
   display: flex;
   justify-content: space-between;
 }
-
 /* unorder list class */
 .links {
   display: flex;
@@ -366,6 +367,9 @@ a {
 .column a {
   margin: 10px 0;
   font-size: 16px;
+}
+footer a:hover {
+  color: #ec46466e;
 }
 .copyright {
   text-align: center;
